# registry-dashboards

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  MANIFEST.in  NOTICE.txt  README.md  SECURITY.md  pyproject.toml  setup.cfg  sonar-project.properties  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -pds-internal--i-t-bug-report.md  feature-request---new-user-story.md  feature_request.md  new-feature---requirement-request.md
.github/workflows/: secrets-detection.yaml  stable-cicd.yaml  unstable-cicd.yaml
data/: export-en.ndjson  export.ndjson
docs/requirements/v0.0.0-dev/: REQUIREMENTS.md
docs/requirements/v2.4.0-dev/: REQUIREMENTS.md
docs/source/: conf.py  index.rst
docs/source/support/: contribute.rst  forum.rst
src/pds/: __init__.py
src/pds/archive_analytics/: __init__.py
tests/pds/archive_analytics/: test_placeholder.py
