[metadata]
name = pds.archive-analytics
author = PDS
author_email = pds_operator@jpl.nasa.gov
description = Kibana-based reporting tool for analytics of the Planetary Data System archive
long_description = file: README.md
long_description_content_type = text/markdown
license = apache-2.0
keywords = pds, planetary data, kibana, analytics, analysis, archive, big data, huge data, data, yuge
url = https://github.com/NASA-PDS/archive-analytics
download_url = https://github.com/NASA-PDS/archive-analytics/releases/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
version: file: src/pds/archive_analytics/VERSION.txt


[options]
install_requires =
zip_safe = True
include_package_data = True
namespace_packages = pds
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.extras_require]
dev =
    black
    flake8
    flake8-bugbear
    flake8-docstrings
    pep8-naming
    mypy
    pydocstyle
    coverage
    pytest
    pytest-cov
    pytest-watch
    pytest-xdist
    pre-commit
    sphinx
    sphinx-rtd-theme
    tox


[options.entry_points]


[options.packages.find]
where = src

[coverage:run]
omit = */_version.py,*/__init__.py


[test]


[tool:pytest]
addopts = -n auto --cov=pds


[install]


[flake8]
max-line-length = 120
extend-exclude = docs,tests,setup.py
docstring_convention = google

# Ignoring:
# E203 prevents flake8 from complaining about whitespace around slice
# components. Black formats per PEP8 and flake8 doesn't like some of
# this.
#
# E501 prevents flake8 from complaining line lengths > 79. We will use
# flake8-bugbear's B950 to handle line length lint errors. This trips
# when a line is > max-line-length + 10%.
extend-ignore = E203, E501

# Selects following test categories:
# D: Docstring errors and warnings
# E, W: PEP8 errors and warnings
# F: PyFlakes codes
# N: PEP8 Naming plugin codes
# B: flake8-bugbear codes
# B***: Specific flake8-bugbear opinionated warnings to trigger
#   B902: Invalid first argument used for method. Use self for instance
#       methods, and cls for class methods
#   B903: Use collections.namedtuple (or typing.NamedTuple) for data classes
#       that only set attributes in an __init__ method, and do nothing else.
#   B950: Line too long. This is a pragmatic equivalent of pycodestyle's
#       E501: it considers "max-line-length" but only triggers when the value
#       has been exceeded by more than 10%.
select = D,E,F,N,W,B,B902,B903,B950


[mypy]


[mypy-pds.*._version]
# We don't care about issues in versioneer's files
ignore_errors = True
